syntax = "proto3";

package keyauth.tag;
option go_package = "github.com/infraboard/keyauth/pkg/tag";

import "pkg/tag/pb/request.proto";
import "pkg/tag/pb/tag.proto";


// Service Tag服务
service TagService {
	rpc CreateTag(CreateTagRequest) returns(TagKey);
	rpc DescribeTag(DescribeTagRequest) returns(TagKey);
	rpc DeleteTag(DeleteTagRequest) returns(TagKey);
	rpc QueryTagKey(QueryTagKeyRequest) returns(TagKeySet);
	rpc QueryTagValue(QueryTagValueRequest) returns(TagValueSet);
}